deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demointegracionappidk8s
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demointegracionappidk8s
    spec:
      containers:
      - name: demointegracionappidk8s
        image: registry.eu-de.bluemix.net/lsappregistry/demointegracionappidk8s:1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: demointegracionappidk8s-service
  labels:
    app: demointegracionappidk8s-service
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 8000

  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: demointegracionappidk8s
